fixed the changepasswordmodal with the same issue being covered by the footer.

--- a/src/components/Account/ChangePassword/ChangePassword.css
+++ b/src/components/Account/ChangePassword/ChangePassword.css
@@ -1,4 +1,4 @@
-.modal #changePasswordModal {
+#changePasswordModal.modal {
   position: fixed;
   top: 0;
   left: 0;
